Bug 483838 - Global Shortcuts: No way for an app to remove its shortcuts
Summary: Global Shortcuts: No way for an app to remove its shortcuts
Status: RESOLVED FIXED
Alias: None
Product: xdg-desktop-portal-kde
Classification: Plasma
Component: general (other bugs)
Version First Reported In: git-master
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-03-17 14:57 UTC by winblocker
Modified: 2025-11-10 11:18 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description winblocker 2024-03-17 14:57:06 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Have an app submit its shortcuts to the portal
2. Have an app submit a partial set of the first submit

OBSERVED RESULT
All bindings from the first submit are still present

EXPECTED RESULT
Only the bindings from the second submit (and eventual key combinations set by the user) should be present

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.0.2
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Kernel Version: 6.7.9-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 32 × AMD Ryzen 9 5950X 16-Core Processor
Memory: 31.3 GiB of RAM
Graphics Processor: AMD Radeon RX 6900 XT

ADDITIONAL INFORMATION
If you need a test application you can use my script for obs-studio i published here:
https://github.com/Aviana/Global-Shortcuts-OBS
Comment 1 Bug Janitor Service 2025-10-29 10:14:23 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/merge_requests/450
Comment 2 David Redondo 2025-11-10 10:53:26 UTC
Git commit 9eedec763d7340af30841ff8f2e9a109953fcb6a by David Redondo.
Committed on 10/11/2025 at 10:53.
Pushed by davidre into branch 'master'.

globalshortcuts: Clear old shortcuts also if we don't have any new ones
FIXED-IN:6.5.3

M  +1    -0    src/globalshortcuts.cpp

https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/commit/9eedec763d7340af30841ff8f2e9a109953fcb6a
Comment 3 David Redondo 2025-11-10 11:18:46 UTC
Git commit 5b97c3ea154d8c9293c7e023f2cf7154723dd8f8 by David Redondo.
Committed on 10/11/2025 at 11:00.
Pushed by davidre into branch 'Plasma/6.5'.

globalshortcuts: Clear old shortcuts also if we don't have any new ones
FIXED-IN:6.5.3


(cherry picked from commit 9eedec763d7340af30841ff8f2e9a109953fcb6a)

bbc6312a globalshortcuts: Clear old shortcuts also if we don't have any new ones

Co-authored-by: David Redondo <kde@david-redondo.de>

M  +1    -0    src/globalshortcuts.cpp

https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/commit/5b97c3ea154d8c9293c7e023f2cf7154723dd8f8