globalshortcuts: Clear old shortcuts also if we don't have any new ones

BUG:483838
FIXED-IN:6.5.2